--- a/src/main/resources/templates/mypage/memberinfo.html
+++ b/src/main/resources/templates/mypage/memberinfo.html
@@ -2,6 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <title>form</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         * {
             margin: 0px;
@@ -80,7 +81,24 @@
         div {
             width: 500px;
             float: left;
-            border: 1px solid;
+            margin-bottom: 100px;
+        }
+        .profile-picture {
+            width: 300px; /* 원하는 너비로 조정 */
+            height: 300px; /* 원하는 높이로 조정 */
+            object-fit: cover; /* 이미지 비율을 유지하며 틀에 맞게 조정 */
+            border-radius: 50%; /* 원형으로 만들기 (선택 사항) */
+            border: none; /* 이미지 테두리 제거 */
+        }
+
+        /* 이미지를 감싸는 div의 스타일 */
+        .profile-picture-container {
+            width: 150px; /* 이미지와 같은 너비 */
+            height: 150px; /* 이미지와 같은 높이 */
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            overflow: hidden; /* 이미지가 div를 넘어서지 않도록 함 */
         }
     </style>
 </head>
@@ -88,7 +106,7 @@
 <div class="wrap">
     <h1>MYPAGE</h1>
     <div>
-        <img th:src="@{${user.profilePicture != null ? '/uploads/' + user.profilePicture : '/images/default-profile.jpeg'}}" alt="User Profile Picture" width="200">
+        <img th:src="@{${user.profilePicture}}" alt="User Profile Picture" class="profile-picture" onerror="this.onerror=null;this.src='/images/default-profile.jpeg';">
     </div>
     <!-- 프로필 사진 업로드 폼 -->
     <form th:action="@{/mypage/uploadProfilePicture}" method="post" enctype="multipart/form-data">
