--- a/src/main/resources/templates/market/ProductDetailView.html
+++ b/src/main/resources/templates/market/ProductDetailView.html
@@ -60,21 +60,24 @@
                         상품 설명
                     </p>
                     <div class="d-flex">
-                        <input class="form-control text-center me-3" id="inputQuantity" type="number" value="1" style="max-width: 3rem" />
+                        <input class="form-control text-center me-3" name="amount" type="number" value="1" style="max-width: 3rem" />
                         <button class="btn btn-outline-dark flex-shrink-0"
                             type="button"
                             th:if="${session.user == null}"
                             onclick="alert('로그인 후 이용해 주세요.')">
-                        <i class="bi-cart-fill me-1"></i>
-                        장바구니 담기
-                    </button>
+                            <i class="bi-cart-fill me-1"></i>
+                            장바구니 담기
+                        </button>
 
-                    <button class="btn btn-outline-dark flex-shrink-0"
-                            type="button"
-                            th:unless="${session.user == null}">
-                        <i class="bi-cart-fill me-1"></i>
-                        장바구니 담기
-                    </button>
+                        <form action="/cart/add" method="post">
+                            <input type="hidden" name="productId" th:value="${product.productId}"/>
+                            <button class="btn btn-outline-dark flex-shrink-0"
+                                    type="submit"
+                                    th:unless="${session.user == null}">
+                                <i class="bi-cart-fill me-1"></i>
+                                장바구니 담기
+                            </button>
+                        </form>
                     </div>
                 </div>
             </div>
