--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -91,7 +91,7 @@
                             <td>
                                 <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px; background-color: #e0e0eb">주문하기</button>
                                 <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">관심 상품 등록</button>
-                                <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">X 삭제</button>
+                                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="removeFromCart(${cartItem.product.id})">X 삭제하기</button>
                             </td>
                         </tr>
                     </tbody>
@@ -112,7 +112,8 @@
             </div>
             <div style="margin: 10px 0;">
                 <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
-                <button class="btn default btnfloat" style="background-color: gray; color: #fff">X 삭제하기</button>&nbsp;
+                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="removeFromCart(${cartItem.product.id})">X 삭제하기</button>
+
                 <button class="btn default btnfloat2">장바구니 비우기</button>
                 <span class="clearboth"></span>
             </div>
@@ -148,4 +149,25 @@
         </div>
     </div>
 </body>
+<script>
+    function removeFromCart(cartId) {
+        if (confirm("정말로 삭제하시겠습니까?")) {
+            fetch('/remove/' + cartId, {
+                method: 'DELETE'
+            })
+            .then(response => {
+                if (response.ok) {
+                    location.reload(); // 예시로 페이지 리로드
+                } else {
+                    alert('삭제 실패');
+                }
+            })
+            .catch(error => {
+                console.error('삭제 중 오류 발생:', error);
+                alert('삭제 중 오류 발생');
+            });
+        }
+    }
+</script>
+
 </html>
