--- a/src/main/resources/templates/mypage/memberinfo.html
+++ b/src/main/resources/templates/mypage/memberinfo.html
@@ -33,59 +33,17 @@
             border-bottom: 3px solid #E5EEFA;
             font-size: 32px;
             letter-spacing: -2px;
-        }
-        .wrap form {
-            margin-top: 30px;
-        }
-        .wrap input[type="text"],
-        .wrap input[type="password"],
-        .wrap input[type="tel"],
-        .wrap input[type="email"] {
-            padding: 10px;
-        }
-        .wrap input[type="submit"] {
             width: 100%;
-            height: 50px;
-            background: #FCF8EC;
-            color: #fff;
-            font-size: 20px;
-            border: none;
-            border-radius: 25px;
-            margin-top: 35px;
         }
-        .wrap input[type="button"] {
-            padding: 6px 10px;
-            border: none;
-            border-radius: 25px;
-            background: #6096B4;
-            font-weight: 600;
-            color: #fff;
-            cursor: pointer;
-        }
-        .wrap dt,
-        .wrap dd {
-            display: inline-block;
-            font-size: 14px;
-            vertical-align: middle;
-        }
-        .wrap dl {
-            margin-top: 10px;
-            font-size: 0;
-        }
-        .wrap dt {
-            width: 20%;
-        }
-        .wrap dd {
-            width: 80%;
-        }
-        div {
-            width: 500px;
-            float: left;
-            margin-bottom: 100px;
+        .profile-section {
+            display: flex;
+            flex-direction: row; /* 수평 레이아웃 설정 */
+            align-items: center;
+            margin-top: 20px;
         }
         .profile-picture {
-            width: 300px; /* 원하는 너비로 조정 */
-            height: 300px; /* 원하는 높이로 조정 */
+            width: 150px; /* 원하는 너비로 조정 */
+            height: 150px; /* 원하는 높이로 조정 */
             object-fit: cover; /* 이미지 비율을 유지하며 틀에 맞게 조정 */
             border-radius: 50%; /* 원형으로 만들기 (선택 사항) */
             border: none; /* 이미지 테두리 제거 */
@@ -93,48 +51,75 @@
 
         /* 이미지를 감싸는 div의 스타일 */
         .profile-picture-container {
-            width: 150px; /* 이미지와 같은 너비 */
-            height: 150px; /* 이미지와 같은 높이 */
+            width: 300px; /* 이미지와 같은 너비 */
+            height: 300px; /* 이미지와 같은 높이 */
             display: flex;
             align-items: center;
             justify-content: center;
             overflow: hidden; /* 이미지가 div를 넘어서지 않도록 함 */
+            margin-right: 20px; /* 이미지와 폼 사이의 간격 */
+        }
+        .info-container {
+            flex-grow: 1; /* 남은 공간을 차지하도록 설정 */
+        }
+        .info-container dl {
+            display: flex;
+            flex-direction: column; /* 세로 레이아웃 설정 */
+        }
+        .info-container dt {
+            margin-top: 10px;
+            font-size: 14px;
+        }
+        .info-container dd {
+            margin-top: 5px;
+            font-size: 14px;
+            display: flex;
+            align-items: center;
+        }
+        .info-container input[type="text"] {
+            margin-left: 10px;
+            padding: 5px;
+        }
+        .info-container button[type="submit"] {
+            margin-left: 10px;
+            padding: 5px 10px;
+            border: none;
+            border-radius: 5px;
+            background: #6096B4;
+            font-weight: 600;
+            color: #fff;
+            cursor: pointer;
         }
     </style>
 </head>
 <body>
 <div class="wrap">
     <h1>MYPAGE</h1>
-    <div>
-        <img th:src="@{${user.profilePicture}}" alt="User Profile Picture" class="profile-picture" onerror="this.onerror=null;this.src='/images/default-profile.jpeg';">
+    <div class="profile-section">
+        <div class="profile-picture-container">
+            <!-- 프로필 사진 출력 -->
+            <img th:src="${user.gender == '남자' ? '/images/man.jpg' : '/images/woman.jpg'}" alt="Profile Picture" class="profile-picture">
+        </div>
+        <div class="info-container">
+            <!-- 사용자 정보 업데이트 폼 -->
+            <form th:action="@{/mypage/update}" method="post">
+                <dl>
+                    <dt>Name</dt>
+                    <dd>
+                        <input type="text" name="name" placeholder="Name" th:value="${user.name}">
+                        <button type="submit">Update</button>
+                    </dd>
+                </dl>
+                <dl>
+                    <dt>Address</dt>
+                    <dd>
+                        <input type="text" name="address" placeholder="Address" th:value="${user.address}">
+                        <button type="submit">Update</button>
+                    </dd>
+                </dl>
+            </form>
+        </div>
     </div>
-    <!-- 프로필 사진 업로드 폼 -->
-    <form th:action="@{/mypage/uploadProfilePicture}" method="post" enctype="multipart/form-data">
-        <input type="file" name="file">
-        <button type="submit">프로필 사진 변경</button>
-    </form>
-
-    <!-- 프로필 사진 삭제 폼 -->
-    <form th:action="@{/mypage/deleteProfilePicture}" method="post">
-        <button type="submit">프로필 사진 삭제</button>
-    </form>
-
-    <form th:action="@{/mypage/update}" method="post">
-        <dl>
-            <dt>이름</dt>
-            <dd>
-                <input type="text" name="name" placeholder="이름" th:value="${user.name}">
-                <button type="submit">수정</button>
-            </dd>
-        </dl>
-        <dl>
-            <dt>주소</dt>
-            <dd>
-                <input type="text" name="address" placeholder="주소" th:value="${user.address}">
-                <button type="submit">수정</button>
-            </dd>
-        </dl>
-    </form>
 </div>
 </body>
 </html>
