--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -19,9 +19,7 @@
             </div>
         </div>
     </header>
-
-    <div th:if="${session != null}">
-        <div id="frame">
+    <div id="frame">
         <form>
             <div id="frame2">
                 <span style="font-size: 16pt; font-weight: bold;">장바구니</span>
@@ -99,11 +97,11 @@
                         <tr style="height: 60px;">
                             <td colspan="5" style="border-right: none; text-align: left; padding-left: 10px;"><span>[기본배송]</span></td>
                             <td colspan="5" style="border-left: none; text-align: right; padding-right: 10px;">
-                                상품 금액 <span th:text="${totalProductPrice}">0</span> + <span>배송비 2,500 = 합계</span>&nbsp;
-                                <span style="font-weight: bold; font-size: 15pt;" th:text="${totalProductPrice + 2500}">0</span>
+                                상품 금액 <span th:text="${totalProductPrice == null ? 0 : totalProductPrice}">0</span> + <span>배송비 2,500 = 합계</span>&nbsp;
+                                <span style="font-weight: bold; font-size: 15pt;" th:text="${totalProductPrice != null ? totalProductPrice + 2500 : 2500}">0</span>
                             </td>
                         </tr>
-                    </tfoot>
+                    <tfoot>
                 </table>
                 <div style="border: solid 1px #e0e0eb; padding: 15px 0;" >
                     <img src="" style="margin-left: 5px; position: relative; top: 4.5px;" th:src="@{/image-path}" />
@@ -141,13 +139,6 @@
             </div>
         </form>
         </div>
-    </div>
-    <div th:if="${session == null}">
-        <div style="text-align: center; margin-top: 50px;">
-                <p>로그인이 필요한 서비스입니다.</p>
-                <a th:href="@{/signin/signin}" class="btn btn-primary">로그인 하러 가기</a>
-        </div>
-    </div>
 </body>
 <script>
     function removeFromCart(cartId) {
@@ -169,5 +160,4 @@
         }
     }
 </script>
-
 </html>
