--- a/src/main/resources/templates/salesManager/RegisterProductForm.html
+++ b/src/main/resources/templates/salesManager/RegisterProductForm.html
@@ -2,90 +2,98 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Lets go - manager </title>
+    <title>Lets go - manager</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <style type="text/css">
+        @font-face {
+            font-family: 'Pretendard-Regular';
+            src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+            font-weight: 400;
+            font-style: normal;
+        }
+        * {
+            font-family: 'Pretendard-Regular', 'sans-serif';
+        }
+    </style>
 </head>
-<style type="text/css">
-    @font-face {
-        font-family: 'Pretendard-Regular';
-        src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-        font-weight: 400;
-        font-style: normal;
-    }
-    * {
-        font-family: 'Pretendard-Regular', 'sans-serif';
-    }
-</style>
 <body>
 <div th:if="${session.user == null}">
     <script>
         alert("로그인 후 이용해주세요");
-        window.close();
+        window.close(); // 로그인 상태가 아니면 페이지 닫기
     </script>
 </div>
 <div th:if="${f != null}">
     <script>
         alert("상품 등록 실패");
-        // return false;
     </script>
 </div>
 <form id="formsub" th:action="@{/market/manager/add}" method="post" enctype="multipart/form-data">
-        <table id="container" class="table table-bordered">
-            <tr>
-                <td id="result" colspan="2"></td>
-            </tr>
-            <tr>
-                <th><label for="productname">상품명</label></th>
-                <td><input type="text" name="productname" id="productname" placeholder="상품명 입력해주세요"></td>
-            </tr>
-            <tr>
-                <th><label for="productprice">가격</label></th>
-                <td><input type="text" name="productprice" id="productprice" placeholder="가격을 적어주세요"></td>
-            </tr>
-            <tr>
-                <th><label for="productcontents">상품 정보</label></th>
-                <td><textarea name="productcontents" id="productcontents" cols="50" rows="20"></textarea></td>
-            </tr>
-            <tr>
-                <th><label for="useremail">작성자</label></th>
-                <td><input type="text" name="useremail" id="useremail" th:value="${loginUserid}" readonly></td>
-            </tr>
-            <tr>
-                <th><label for="files"> 이미지 파일</label></th>
-                <td><input type="file" multiple name="files" id="files">
+    <table id="container" class="table table-bordered">
+        <tr>
+            <td id="result" colspan="2"></td>
+        </tr>
+        <tr>
+            <th><label for="productName">상품명</label></th>
+            <td><input type="text" name="productName" id="productName" placeholder="상품명 입력해주세요"></td>
+        </tr>
+        <tr>
+            <th><label for="productPrice">원가</label></th>
+            <td><input type="text" name="productPrice" id="productPrice" placeholder="원가를 적어주세요"></td>
+        </tr>
+        <tr>
+            <th><label for="productSellPrice">판매가</label></th>
+            <td><input type="text" name="productSellPrice" id="productSellPrice" placeholder="판매가를 적어주세요"></td>
+        </tr>
+        <tr>
+            <th><label for="productDescription">상품 정보</label></th>
+            <td><textarea name="productDescription" id="productDescription" cols="50" rows="20"></textarea></td>
+        </tr>
+        <tr>
+            <th><label for="nickName">작성자</label></th>
+            <td><input type="text" name="nickName" id="nickName" th:value="${user.id}" readonly></td>
+        </tr>
+        <tr>
+            <th><label for="files"> 이미지 파일</label></th>
+            <td><input type="file" multiple name="files" id="files">
                 <div class="select_img"></div></td>
-            </tr>
-            <tr>
-                <th colspan="2">
-                    <input type="button" id="submitButn" value="등록하기">
-                </th>
-            </tr>
-        </table>
-    </form>
+        </tr>
+        <tr>
+            <th colspan="2">
+                <input type="submit" id="submitButn" value="등록하기">
+            </th>
+        </tr>
+    </table>
+</form>
 
-    <script>
+<script>
     $(document).ready(function(){
         $("#submitButn").on("click",function(){
-            var productname = $("#productname").val();
-            var productcontents = $("#productcontents").val();
-            var productprice = $("#productprice").val();
-            var useremail = $("#useremail").val();
+            var productName = $("#productName").val();
+            var productDescription = $("#productDescription").val();
+            var productPrice = $("#productPrice").val();
+            var productSellPrice = $("#productSellPrice").val();
+            var nickName = $("#nickName").val();
             var formData = new FormData();
 
-            if(productname === ""){
+            if(productName === ""){
                 alert("상품명을 입력해주세요");
                 return false;
             }
-            else if(productprice === ""){
+            else if(productPrice === ""){
                 alert("상품 가격을 입력해주세요");
                 return false;
             }
-            else if(isNaN(productprice) === true){
+            else if(productSellPrice === ""){
+                alert("상품 가격을 입력해주세요");
+                return false;
+            }
+            else if(isNaN(productPrice) === true && isNaN(productSellPrice) === true){
                 alert("숫자만 입력해주세요");
                 return false;
             }
-            else if(productcontents === ""){
+            else if(productDescription === ""){
                 alert("상품 내용을 입력해주세요");
                 return false;
             }
@@ -96,17 +104,17 @@
                 for (var i = 0; i < files.length; i++) {
                     formData.append("files",files[i]);
                 }
-                formData.append("productname",productname);
-                formData.append("productcontents",productcontents);
-                formData.append("productprice",productprice);
-                formData.append("useremail",useremail);
-                console.log(formData);
+                formData.append("productName",productName);
+                formData.append("productDescription",productDescription);
+                formData.append("productPrice",productPrice);
+                formData.append("productSellPrice",productSellPrice);
+                formData.append("nickName",nickName);
+
                 $.ajax({
                     url: '/product/uploadFile',
                     processData : false,
                     contentType : false,
                     data : formData,
-                    datatype : JSON,
                     type : "POST",
                     success : function(data){
                         if(data === "f"){
@@ -120,6 +128,6 @@
             }
         });
     });
-    </script>
+</script>
 </body>
 </html>
