--- a/src/main/resources/templates/swimpool/Search.html
+++ b/src/main/resources/templates/swimpool/Search.html
@@ -15,7 +15,8 @@
         rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="/css/marketMenu.css">
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
   <style>
     .map {width: 100%; margin:20px auto; height: 500px; display: block;}
@@ -56,7 +57,9 @@
       display: inline-block;
     }
     .select-box select, .button-box button {
+      align-items: flex-start;
       appearance: none;
+      position: relative;
       -webkit-appearance: none;
       -moz-appearance: none;
       box-shadow: none;
@@ -66,17 +69,18 @@
       font-size: 14px;
       text-align: center;
       margin-left: 5px;
-      padding: 0 15px;
+      padding: 0 10px;
       line-height: 32px;
       height: 32px;
-      position: relative;
       cursor: pointer;
       background-color: transparent;
       outline: none;
       transition: border-color 0.3s ease;
     }
+
     .select-box select:valid,
-    .view-scrap-button.clicked{
+    .view-scrap-button.clicked,
+    .view-my-loc.clicked{
       border: 1px solid #6BBBD8;
     }
   </style>
@@ -101,9 +105,12 @@
 <!-- Section -->
 <div class='main'>
   <div class="filter-bar">
+    <div class="button-box">
+      <button class="view-my-loc" id="viewMyLocBtn">내 위치</button>
+    </div>
     <div class="select-box">
-      <form id="myForm" action="" method="post">
-        <select name="area1" required>
+      <form id="searchForm">
+        <select name="area1" id="areaSelect" required>
           <option value="">전국</option>
           <option value="서울">서울</option>
           <option value="경기">경기</option>
@@ -125,32 +132,167 @@
       </form>
     </div>
     <div class="button-box">
-      <button class="view-scrap-button" onclick="changeBorderColor(this)">스크랩 보기</button>
+      <button class="view-scrap-button">스크랩 보기</button>
     </div>
   </div>
+  <!-- 검색어 표시와 지도 -->
+  <div id="displayDiv"></div>
   <div id="map" class="map"></div>
-
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=7ce4fc9ac0a312eaf303f311cb97413a"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-
 </div>
 <!-- Footer -->
 <footer class="py-5" style="background-color: #0E46A3">
   <div class="container"><p class="m-0 text-center text-white">Software System &copy; 240105 marin-girls</p></div>
 </footer>
 </body>
-<script>
-  function changeBorderColor(button) {
-    button.classList.toggle('clicked');
+
+<!-- script -->
+<!--<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fa248ac11d026fa1559837ea5bbfbd97"></script>-->
+<script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fa248ac11d026fa1559837ea5bbfbd97&libraries=services,clusterer,drawing"></script>
+
+<script type="text/javascript">
+  //변수 선언
+  var mapContainer = document.getElementById('map'), // 지도를 표시할 div
+          mapOption = {
+            center: new kakao.maps.LatLng(33.450701, 126.570667), // 지도의 중심좌표
+            level: 3 // 지도의 확대 레벨
+          };
+  var map = new kakao.maps.Map(mapContainer, mapOption); // 지도를 생성
+  var geocoder = new kakao.maps.services.Geocoder(); // 주소-좌표 변환 객체를 생성
+  var ps = new kakao.maps.services.Places();
+
+  // 함수: 처음 주소-> 동덕여대
+  addressSearchAndCenterMap(geocoder, map);
+  function addressSearchAndCenterMap(geocoder, map) {
+    geocoder.addressSearch('서울특별시 성북구 화랑로13길 60', function (result, status) {
+      if (status === kakao.maps.services.Status.OK) {
+        var coords = new kakao.maps.LatLng(result[0].y, result[0].x);
+        map.setCenter(coords);
+      }
+    });
   }
 
 
-  var container = document.getElementById('map'); //지도를 담을 영역의 DOM 레퍼런스
-  var options = { //지도를 생성할 때 필요한 기본 옵션
-    center: new kakao.maps.LatLng(33.450701, 126.570667), //지도의 중심좌표.
-    level: 3 //지도의 레벨(확대, 축소 정도)
-  };
+  //함수: 버튼에 이벤트 추가
+  document.addEventListener('DOMContentLoaded', function () {
+    const viewMyLocBtn = document.getElementById('viewMyLocBtn');
+    const areaSelect = document.getElementById('areaSelect');
 
-  var map = new kakao.maps.Map(container, options);
+    //1. 내 위치 버튼
+    viewMyLocBtn.addEventListener('click', function () {
+      //중복시 버튼 비활성화
+      if (viewMyLocBtn.classList.contains('clicked')) {
+        viewMyLocBtn.classList.remove('clicked');
+        addressSearchAndCenterMap(geocoder, map);
+      }
+      //내 위치 버튼 활성화& Select 요소 비활성화 처리
+      else {
+        viewMyLocBtn.classList.add('clicked');
+        areaSelect.selectedIndex = 0;
+        areaSelect.classList.remove('active');
+        currentLocation()
+      }
+    });
+
+    //2. 장소 선택 버튼
+    areaSelect.addEventListener('change', function () {
+      // 내 위치 버튼 비활성화 & Select 요소 활성화 처리
+      viewMyLocBtn.classList.remove('clicked');
+      areaSelect.classList.add('active');
+      // Select된 장소 처리
+      const selectedArea = areaSelect.value;
+      console.log(selectedArea);
+      // displayDiv.textContent = `검색어: ${selectedArea}`;
+      searchPlaces(selectedArea + ' 수영장');
+    });
+  });
+
+  //함수: 현재위치 기반으로 검색어 만들기
+  function currentLocation() {
+    if (navigator.geolocation) {
+      navigator.geolocation.getCurrentPosition(function(position) {
+        var lat = position.coords.latitude, lon = position.coords.longitude;  //위도와 경로
+        var locPosition = new kakao.maps.LatLng(lat, lon);
+        geocoder.coord2Address(lon, lat, function (result, status) {
+          if (status === kakao.maps.services.Status.OK) {
+            var address = result[0].address.address_name;
+            searchPlaces(address + ' 수영장');
+          }
+        });
+
+        // displayDiv.textContent = `검색어: ` + locPosition;
+      });
+    } else { // HTML5의 GeoLocation을 사용할 수 없을때 마커 표시 위치와 인포윈도우 내용을 설정합니다
+      addressSearchAndCenterMap(geocoder, map)
+      }
+  }
+
+  function searchPlaces(query) {
+    ps.keywordSearch(query, placesSearchCB);
+  }
+
+  function placesSearchCB (data, status, pagination) {
+    if (status === kakao.maps.services.Status.OK) {
+
+      // 검색된 장소 위치를 기준으로 지도 범위를 재설정하기위해
+      // LatLngBounds 객체에 좌표를 추가합니다
+      var bounds = new kakao.maps.LatLngBounds();
+
+      for (var i=0; i<data.length; i++) {
+        displayMarker(data[i]);
+        bounds.extend(new kakao.maps.LatLng(data[i].y, data[i].x));
+      }
+
+      // 검색된 장소 위치를 기준으로 지도 범위를 재설정합니다
+      map.setBounds(bounds);
+      var level = map.getLevel();
+      map.setLevel(level-1);
+    }
+  }
+
+  //함수: 마커생성
+  function displayMarker(place) {
+    // 마커를 생성하고 지도에 표시합니다
+    var marker = new kakao.maps.Marker({
+      map: map,
+      position: new kakao.maps.LatLng(place.y, place.x)
+    });
+
+    var n = place.place_name;
+    var p = new kakao.maps.LatLng(place.y, place.x);
+
+    iwPosition = new kakao.maps.LatLng(place.y, place.x);
+
+    // 비동기 작업을 처리하는 함수
+    function handleAsyncResults(result, status) {
+      if (status === kakao.maps.services.Status.OK) {
+        var detailAddr = !!result[0].road_address ? result[0].road_address.address_name : '';
+        var iwContent = '<div style="padding:5px;">' +
+                place.place_name + '<br>'+ detailAddr +
+                '<br><a href="https://map.kakao.com/link/to/' + n + ',' + place.y + ',' + place.x + '"style="color:blue" target="_blank">길찾기</div></a>'
+                + '<button onclick="bookMark(\'' + n + '\',\'' + detailAddr + '\')">즐겨찾기 추가</button>';
+
+        var infowindow = new kakao.maps.InfoWindow({
+          position: iwPosition,
+          content: iwContent,
+          removable: true
+        });
+
+        // 마커에 클릭이벤트를 등록합니다
+        kakao.maps.event.addListener(marker, 'click', function () {
+          // 마커를 클릭하면 장소명이 인포윈도우에 표출됩니다
+          infowindow.setContent(iwContent);
+          infowindow.open(map, marker);
+        });
+      }
+    }
+    // 비동기 처리 함수 호출
+    geocoder.coord2Address(p.getLng(), p.getLat(), handleAsyncResults);
+  }
+
+  //함수->북마크 버튼 클릭시 회원의 동아리의 즐겨찾기에 추가
+
+
+
+
 </script>
 </html>
