--- a/src/main/resources/templates/market/Cart.html
+++ b/src/main/resources/templates/market/Cart.html
@@ -89,7 +89,11 @@
                             <td>
                                 <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px; background-color: #e0e0eb">주문하기</button>
                                 <button class="btn default" style="border-radius: 3px; width: 90px; margin-bottom: 3px; font-size: 11px;">관심 상품 등록</button>
-                                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="removeFromCart(${cartItem.product.id})">X 삭제하기</button>
+<!--                                <button class="btn default btnfloat" style="background-color: gray; color: #fff" type="button" onclick="deleteCartItem([[${cartItem.cartId}]])">삭제</button>-->
+                                <form th:action="@{/cart/remove/{cartId}(cartId=${cartItem.cartId})}" method="post">
+                                    <input type="hidden" name="_method" value="delete"/>
+                                    <button type="submit" class="btn default btnfloat" style="background-color: gray; color: #fff">삭제</button>
+                                </form>
                             </td>
                         </tr>
                     </tbody>
@@ -110,8 +114,7 @@
             </div>
             <div style="margin: 10px 0;">
                 <span style="margin: 0 10px;" class="btnfloat">선택 상품을</span>
-                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="removeFromCart(${cartItem.product.id})">X 삭제하기</button>
-
+                <button class="btn default btnfloat" style="background-color: gray; color: #fff" onclick="deleteCartItem(${cartItem.product.id})">X 삭제하기</button>
                 <button class="btn default btnfloat2">장바구니 비우기</button>
                 <span class="clearboth"></span>
             </div>
@@ -141,23 +144,20 @@
         </div>
 </body>
 <script>
-    function removeFromCart(cartId) {
-        if (confirm("정말로 삭제하시겠습니까?")) {
-            fetch('/remove/' + cartId, {
-                method: 'DELETE'
-            })
-            .then(response => {
-                if (response.ok) {
-                    location.reload(); // 예시로 페이지 리로드
-                } else {
-                    alert('삭제 실패');
-                }
-            })
-            .catch(error => {
-                console.error('삭제 중 오류 발생:', error);
-                alert('삭제 중 오류 발생');
-            });
+   function deleteCartItem(cartId) {
+            if (confirm("정말로 삭제하시겠습니까?")) {
+                $.ajax({
+                    url: '/cart/remove/' + cartId,
+                    type: 'DELETE',
+                    success: function(result) {
+                        window.location.reload();
+                    },
+                    error: function(error) {
+                        alert("삭제 실패");
+                    }
+                });
+            }
         }
-    }
+
 </script>
 </html>
