--- a/src/main/resources/templates/market/ProductDetailView.html
+++ b/src/main/resources/templates/market/ProductDetailView.html
@@ -6,6 +6,7 @@
     <meta name="author" content="" />
     <title>Shop Item - Start Bootstrap Template</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/marketMenu.css">
     <style>
         .card-img-top {
             width: auto;
@@ -33,7 +34,9 @@
 <body>
     <div th:insert="~{common/navibar :: body}"></div>
 
-    <!-- Header -->
+    <!-- 우측 메뉴바 -->
+    <div class="market-menu" th:insert="~{/market/MarketMenubar :: body}"></div>
+
     <header class="py-5" style="background-color: #0E46A3">
         <div class="container px-4 px-lg-5 my-5">
             <div class="text-center text-white">
